[package]
name = "arnie"
version = "0.1.0"
authors = ["James Fator <jamesfator@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oorandom = "11.1.2"
stdweb = { version = "0.4.20", optional = true }

[features]
web = ["stdweb"]

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "arnie_js"
path = "src/js.rs"
required-features = ["web"]
